# mlops

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  setup.cfg  train.py
.dvc/: config
config/: params.yaml
data/: .gitignore  eurosat.dvc
mlops/: config.py  data.py  hydra_callbacks.py  infer.py  model.py  run_server.py  train.py
