[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "Simple MLOps project for MLOps course"
authors = ["Alexandr Korchemnyi <akorchemnyj@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-learn = "^1.3.1"
numpy = "^1.26.0"
pandas = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
